# code-rag

./: .gitignore  README.md  main.py  pyproject.toml
src/: client.py
src/code_rag/: embed.py  generate.py  parse.py  rerank.py  retrieve.py
